--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=Б, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="assets/favicon.ico">
+    <title>cv</title>
 </head>
 <body>
-    <p>Вот и страничка!</p>
+    <header class="header"></header>
+    <main class="main"></main>
+    <footer class="footer"></footer>
 </body>
 </html>
