--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="container">
             <nav class="nav">
                 <ul class="nav-list">
+                    <li class="nav-item"><a href="#profile" class="nav-link">Profile</a></li>
                     <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
                     <li class="nav-item"><a href="#about-myself" class="nav-link">About myself</a></li>
                     <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
@@ -24,7 +25,84 @@
         </div>
     </header>
     <main class="main">
-        <div class="container"></div>
+        <div class="container main-container">
+            <section class="section" id="profile">
+                <h1 class="section-title">Uladzimir Herman</h1>
+                <h2 class="section-title">Junior Frontend Developer</h2>
+            </section>
+            <section class="section" id="contacts">
+                <h3>Contacts</h3>
+                <ul>
+                    <li>
+                        <b>Phone:</b>
+                        <p>+375 29 2801683</p>
+                    </li>
+                    <li>
+                        <b>E-mail:</b>
+                        <p>uladz.herman@gmail.com</p>
+                    </li>
+                </ul>
+            </section>
+            <section class="section" id="about-myself">
+                <h2>Briefly About Myself:</h2>
+                <p>Having started my career, while i was at university, as a computer repair engineer in a local service center with minimum skills, 
+                    i became experienced in electronics. My desire to learn and teach was realized by working as a teacher at school.</p>
+                <p>Three years ago  I became the head of the resource center for information technologies in education in my homegrown city. 
+                    I've mastered different technologies, learned to work with optical networks, accompanied the work of schools' websites.</p>
+                <p>Work as the head of the CIT required additional knowledge in Frontend Development. 
+                    I'm interested in Web Development, because it provides to me endless possibilities for professional growth, 
+                    requires constant training and give to me possibility to solve complex problems.</p>
+                <p>I believe, that my ability to self-education, 
+                    gain new skills and addiction to solve new problems will lead me to a proficient Frontend Developer.</p>
+            </section>
+            <section class="section" id="skills">
+                <h2 class="section-title">Skills and Proficiency:</h2>
+                    <ul>
+                        <li>HTML5, CSS</li>
+                        <li>Javascript</li>
+                        <li>Git, GitHub</li>
+                        <li>VS Code</li>
+                    </ul>
+            </section>
+            <section class="section" id="courses">
+                <h2 class="section-title">Courses:</h2>
+                <ul>
+                    <li>JavaScript Manual on learnjavascript.ru</li>
+                    <li>RS Schools Course «JavaScript/Front-end. Stage 0» (in progress)</li>
+                </ul>
+            </section>
+            <section class="section" id="code-example">
+                <p><b>Problem: </b>If we list all the natural numbers below 10 that are multiples of 3 or 5, we get 3, 5, 6 and 9. 
+                    The sum of these multiples is 23.</p>
+                <p>Finish the solution so that it returns the sum of all the multiples of 3 or 5 below the number passed in.
+                    Additionally, if the number is negative, return 0 (for languages that do have them).</p>
+                <p><b>Note: </b> If the number is a multiple of both 3 and 5, only count it once.</p>
+                <h3>Solution:</h3>
+                <pre>
+                    <code>
+                        function solution(number){
+                            if (number < 0) {
+                              return 0;
+                            }
+                            let sum = 0;
+                            for (let i = 1; i < number; i++) {
+                              if ((i % 3 === 0) || (i % 5 === 0)) {
+                                sum += i;
+                              }
+                            }
+                            return sum;
+                          }
+                    </code>
+                </pre>
+            </section>
+            <section class="section" id="languages">
+                <h2 class="section-title">Languages:</h2>
+                <ul>
+                    <li><b>English</b> - Intermediate/Upper-intermediate</li>
+                    <li><b>Russian</b> - Native</li>
+                </ul>
+            </section>
+        </div>
     </main>
     <footer class="footer">
         <div class="container"></div>
