refactor: rebase project on new page layout

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=Б, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="assets/favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&display=swap" rel="stylesheet">
     <title>cv</title>
 </head>
 <body>
     <header class="header">
-        <div class="container">
+        <div class="container header-container">
             <nav class="nav">
                 <ul class="nav-list">
                     <li class="nav-item"><a href="#profile" class="nav-link">Profile</a></li>
@@ -22,63 +23,68 @@
                     <li class="nav-item"><a href="#languages" class="nav-link">Languages</a></li>
                 </ul>
             </nav>
+            <div class="toggle">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
         </div>
     </header>
     <main class="main">
         <div class="container main-container">
-            <section class="section" id="profile">
-                <h1 class="section-title">Uladzimir Herman</h1>
-                <h2 class="section-title">Junior Frontend Developer</h2>
+            <section class="section section-profile" id="profile">
+                <img src="./assets/img/avatar.jpg" alt="" class="section-profile-logo">
+                <div class="section-profile-title">
+                    <h1 class="section-title main-title">Uladzimir Herman</h1>
+                    <h2 class="section-subtitle">Junior Frontend Developer</h2>
+                </div>
             </section>
             <section class="section" id="contacts">
-                <h3>Contacts</h3>
-                <ul>
-                    <li>
-                        <b>Phone:</b>
-                        <p>+375 29 2801683</p>
+                <h2 class="section-title">Contacts</h2>
+                <ul class=section-list>
+                    <li class="section-item contacts-item">
+                        Kobrin, Belarus
                     </li>
-                    <li>
-                        <b>E-mail:</b>
-                        <p>uladz.herman@gmail.com</p>
+                    <li class="section-item contacts-item">
+                        Email: <a href="mailto:uladz.herman@gmail.com" title="email">uladz.herman@gmail.com</a>
+                    </li>
+                    <li class="section-item contacts-item">
+                        Github: <a href="https://github.com/mesandman92" title="github">mesandman92</a>
                     </li>
                 </ul>
             </section>
             <section class="section" id="about-myself">
-                <h2>Briefly About Myself:</h2>
+                <h2 class="section-title">Briefly About Myself:</h2>
                 <p>Having started my career, while i was at university, as a computer repair engineer in a local service center with minimum skills, 
-                    i became experienced in electronics. My desire to learn and teach was realized by working as a teacher at school.</p>
-                <p>Three years ago  I became the head of the resource center for information technologies in education in my homegrown city. 
-                    I've mastered different technologies, learned to work with optical networks, accompanied the work of schools' websites.</p>
-                <p>Work as the head of the CIT required additional knowledge in Frontend Development. 
+                    i became experienced in electronics. My desire to learn and teach was realized by working as a teacher at school.
+                    Three years ago  I became the head of the resource center for information technologies in education in my homegrown city. 
+                    I've mastered different technologies, learned to work with optical networks, accompanied the work of schools' websites.
+                    Work as the head of the CIT required additional knowledge in Frontend Development. 
                     I'm interested in Web Development, because it provides to me endless possibilities for professional growth, 
-                    requires constant training and give to me possibility to solve complex problems.</p>
-                <p>I believe, that my ability to self-education, 
+                    requires constant training and give to me possibility to solve complex problems.
+                    I believe, that my ability to self-education, 
                     gain new skills and addiction to solve new problems will lead me to a proficient Frontend Developer.</p>
             </section>
             <section class="section" id="skills">
                 <h2 class="section-title">Skills and Proficiency:</h2>
-                    <ul>
-                        <li>HTML5, CSS</li>
-                        <li>Javascript</li>
-                        <li>Git, GitHub</li>
-                        <li>VS Code</li>
+                    <ul class="section-list">
+                        <li class="section-item">HTML5, CSS</li>
+                        <li class="section-item">Javascript</li>
+                        <li class="section-item">Git, GitHub</li>
+                        <li class="section-item">VS Code</li>
                     </ul>
             </section>
             <section class="section" id="courses">
                 <h2 class="section-title">Courses:</h2>
-                <ul>
-                    <li>JavaScript Manual on learnjavascript.ru</li>
-                    <li>RS Schools Course «JavaScript/Front-end. Stage 0» (in progress)</li>
+                <ul class="section-list">
+                    <li class="section-item">JavaScript Manual on learnjavascript.ru</li>
+                    <li class="section-item">CS50</li>
+                    <li class="section-item">RS Schools Course «JavaScript/Front-end. Stage 0» (in progress)</li>
                 </ul>
             </section>
             <section class="section" id="code-example">
-                <p><b>Problem: </b>If we list all the natural numbers below 10 that are multiples of 3 or 5, we get 3, 5, 6 and 9. 
-                    The sum of these multiples is 23.</p>
-                <p>Finish the solution so that it returns the sum of all the multiples of 3 or 5 below the number passed in.
-                    Additionally, if the number is negative, return 0 (for languages that do have them).</p>
-                <p><b>Note: </b> If the number is a multiple of both 3 and 5, only count it once.</p>
-                <h3>Solution:</h3>
-                <pre>
+                <h2 class="section-title">Code:</h2>
+                <pre class="pre">
                     <code>
                         function solution(number){
                             if (number < 0) {
@@ -98,14 +104,20 @@
             <section class="section" id="languages">
                 <h2 class="section-title">Languages:</h2>
                 <ul>
-                    <li><b>English</b> - Intermediate/Upper-intermediate</li>
+                    <li><b>English</b> - Intermediate</li>
                     <li><b>Russian</b> - Native</li>
                 </ul>
             </section>
         </div>
     </main>
     <footer class="footer">
-        <div class="container"></div>
+        <div class="container footer-container">
+            <div>© 2022 <a href="https://github.com/mesandman92" class="github nav-link">mesandman</a></div>
+                <a href="https://rs.school/js/" class="rss"></a>
+            </div>
+    </footer>
+    <script src="js/index.js"></script>
+        </div>
     </footer>
 </body>
 </html>
